kubernetes/nextcloud-fpm/components/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: nginx
  type: ClusterIP
