kubernetes/nextcloud-fpm/components/nginx/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress-to-nextcloud
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              app: nextcloud
      ports:
        - protocol: TCP
          port: 9000
